--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh">
 
 <head>
+    <meta name="AppPublic" content="">
     <meta charset="UTF-8">
     <!-- 可视区域的定义，如屏幕缩放等。告诉浏览器如何规范的渲染网页。 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -22,10 +23,10 @@
     <!-- <meta name="x5-fullscreen" content="true"> -->
     <title></title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_578442_43spntufpeq.css">
-<link href="assets/main.fe211.css" rel="stylesheet"></head>
+<link href="main.5f680.css" rel="stylesheet"></head>
 
 <body>
     <div id="app"></div>
-<script type="text/javascript" src="assets/manifest.5190b.js"></script><script type="text/javascript" src="assets/vendor.29749.js"></script><script type="text/javascript" src="assets/main.9835a.js"></script></body>
+<script type="text/javascript" src="manifest.e0549.js"></script><script type="text/javascript" src="vendor.9cb8f.js"></script><script type="text/javascript" src="main.ca709.js"></script></body>
 
 </html>
