--- a/index.html
+++ b/index.html
@@ -1,32 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh">
-
+<html lang="en">
 <head>
-    <meta name="AppPublic" content="">
     <meta charset="UTF-8">
-    <!-- 可视区域的定义，如屏幕缩放等。告诉浏览器如何规范的渲染网页。 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <!-- 忽略Android平台中对邮箱地址的识别 -->
-    <!-- 对电话号码的识别 -->
-    <meta name="format-detection" content="telphone=no, email=no" />
-    <!-- 苹果webapp模式 -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <!-- 苹果webapp模式 -->
-    <meta name="apple-touch-fullscreen" content="yes">
-    <!-- UC强制全屏 -->
-    <!-- <meta name="full-screen" content="yes"> -->
-    <!-- uc强制竖屏 -->
-    <meta name="screen-orientation" content="portrait">
-    <!-- QQ强制竖屏 -->
-    <meta name="x5-orientation" content="portrait">
-    <!-- QQ强制全屏 -->
-    <!-- <meta name="x5-fullscreen" content="true"> -->
-    <title></title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_578442_43spntufpeq.css">
-<link href="main.5f680.css" rel="stylesheet"></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
 
+    </style>
+</head>
 <body>
-    <div id="app"></div>
-<script type="text/javascript" src="manifest.e0549.js"></script><script type="text/javascript" src="vendor.9cb8f.js"></script><script type="text/javascript" src="main.ca709.js"></script></body>
-
+    <div class="box">
+test
+    </div>
+</body>
 </html>
