--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
         function blank(){
             var elm = document.getElementById('input');
-            window.location.href = elm.value
+            window.open(elm.value)
         }
         
     </script>
