--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <input type="text" id="input" value="http://192.168.99.83:4005/#/">
+    <input type="text" id="input" value="https://192.168.99.83:4005/#/">
     <button onclick="blank()">按钮</button>
 
     <script>
