--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-
-    </style>
-</head>
-<body>
-    <input type="text" id="input" value="https://192.168.99.83:4005/#/">
-    <button onclick="blank()">按钮</button>
-
-    <script>
-        function blank(){
-            var elm = document.getElementById('input');
-            window.open(elm.value)
-        }
-        
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html lang=zh><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=stylesheet href=//at.alicdn.com/t/font_1288686_j7ue51ww4ei.css><link rel=icon href=/favicon.ico><title></title><link href=/css/app.2b8bfcd3.css rel=preload as=style><link href=/js/app.348f4847.js rel=preload as=script><link href=/js/chunk-vendors.3f52221b.js rel=preload as=script><link href=/css/app.2b8bfcd3.css rel=stylesheet></head><body><div id=app></div><script src=/js/chunk-vendors.3f52221b.js></script><script src=/js/app.348f4847.js></script></body></html>
