--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html lang=zh><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=stylesheet href=//at.alicdn.com/t/font_1288686_j7ue51ww4ei.css><link rel=icon href=/favicon.ico><title></title><link href=/css/app.2b8bfcd3.css rel=preload as=style><link href=/js/app.884753ed.js rel=preload as=script><link href=/js/chunk-vendors.3f52221b.js rel=preload as=script><link href=/css/app.2b8bfcd3.css rel=stylesheet></head><body><div id=app></div><script src=/js/chunk-vendors.3f52221b.js></script><script src=/js/app.884753ed.js></script></body></html>
+<!DOCTYPE html>
+<html lang=zh>
+
+<head>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+    <link rel=stylesheet href=//at.alicdn.com/t/font_1288686_j7ue51ww4ei.css> <link rel=icon href=/favicon.ico> <title>
+    </title>
+    <link href=/css/app.2b8bfcd3.css rel=preload as=style>
+    <link href=/js/app.884753ed.js rel=preload as=script>
+    <link href=/js/chunk-vendors.3f52221b.js rel=preload as=script>
+    <link href=/css/app.2b8bfcd3.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script src=/js/chunk-vendors.3f52221b.js> </script> <script src=/js/app.884753ed.js> </script>
+    <script>
+        window.onerror= function(msg,url,l) {
+            alert(msg)
+            alert(url)
+            alert(l)
+        }
+    </script>
+</body> </html>
