--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
-    <script>
-        function os() {
-            var ua = navigator.userAgent,
-            isAndroid = /(?:Android)/.test(ua), 
-            isPhone = /(?:iPhone)/.test(ua) && !isTablet,
-            isPc = !isPhone && !isAndroid
-            return {
-                isPhone: isPhone,
-                isAndroid : isAndroid,
-                isPc : isPc
-            };
-        }
-        var origin = window.location.origin
-        if(os().isPc){
-            window.location.href = origin + '/PC/index.html'
-        } else {
-            window.location.href = origin + '/H5/index.html'
-        }
-    </script>
-</head>
-<body>
-    
-</body>
-</html>
+<script>
+    var userAgent = navigator.userAgent
+    var FLAG = userAgent.indexOf('iPhone') || userAgent.indexOf('Android')
+    if(FLAG){
+        window.location.href = origin + '/PC/index.html'
+    } else {
+        window.location.href = origin + '/H5/index.html'
+    }
+    // function os() {
+    //     var ua = navigator.userAgent,
+    //     isAndroid = /(?:Android)/.test(ua), 
+    //     isPhone = /(?:iPhone)/.test(ua) && !isTablet,
+    //     isPc = !isPhone && !isAndroid
+    //     return {
+    //         isPhone: isPhone,
+    //         isAndroid : isAndroid,
+    //         isPc : isPc
+    //     };
+    // }
+    // var origin = window.location.origin
+    // if(os().isPc){
+    //     window.location.href = origin + '/PC/index.html'
+    // } else {
+    //     window.location.href = origin + '/H5/index.html'
+    // }
+</script>
