--- a/H5/index.html
+++ b/H5/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    H5
-</body>
-</html>
+<!DOCTYPE html><html lang=zh><head><title></title><meta charset=utf-8><meta name=referrer content=no-referrer><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=stylesheet href=//at.alicdn.com/t/font_1288686_j7ue51ww4ei.css><link rel=icon href=/favicon.ico><link href=/assets/css/app.22b99c89.css rel=preload as=style><link href=/assets/js/app.018a58ba.js rel=preload as=script><link href=/assets/js/chunk-vendors.06dc32d2.js rel=preload as=script><link href=/assets/css/app.22b99c89.css rel=stylesheet></head><body><div id=app></div><script src=/assets/js/chunk-vendors.06dc32d2.js></script><script src=/assets/js/app.018a58ba.js></script></body></html>
