--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         var iPhone = userAgent.indexOf('iPhone')
         var android = userAgent.indexOf('Android')
         if(iPhone != -1 || android != -1){
-            window.location.href = origin + '/H5/index.html'        
+            window.location.href = origin + '/H5/index.html'
+            window.event.returnValue = false
         } else {
             window.location.href = origin + '/PC/index.html'
+            window.event.returnValue = false
         }
     </script>
 </head>
