--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         var android = userAgent.indexOf('Android')
         try {
             if(iPhone != -1 || android != -1){
-                window.location.href = origin + '/H5/index.html'
+                window.location.href = window.location.origin + '/H5/index.html'
                 window.event.returnValue = false
             } else {
-                window.location.href = origin + '/PC/index.html'
+                window.location.href = window.location.origin + '/PC/index.html'
                 window.event.returnValue = false
             }
         } catch (error) {
